# EqM_mnist

./: .gitignore  README.md  lab_code.py  pyproject.toml  train.ipynb  viz.ipynb
configs/eqm/: base.yml  grad_1.yml  grad_10.yml  grad_2.yml
data/: alpha_beta.py  sampleable.py
eqm_mnist/data/: sampleable.py  simulator.py
eqm_mnist/model/: mnist_unet.py
eqm_mnist/sampler/: eqm_sampler.py
eqm_mnist/train/: experiment_runner.py  run_experiments.py  trainer.py
eqm_mnist/train/results/eqm/base_grad_1/: config.yaml  losses.npy  samples.npy
eqm_mnist/train/results/eqm/base_grad_10/: config.yaml  losses.npy  samples.npy
eqm_mnist/train/results/eqm/base_grad_2/: config.yaml  losses.npy  samples.npy
eqm_mnist/train/results/eqm/eqm_base/: config.yaml  losses.npy  samples.npy
model/: mnist_unet.py
train/: c_functions.py  experiment_runner.py  run_experiments.py  trainer.py  utils.py
